tests/snapshots/virtual_endpoint_fidelity__dump_mode_model_preserves_virtual_endpoint_found_lost_side_shape_semantics.snap
---
source: tests/virtual_endpoint_fidelity.rs
expression: json
---
{
  "participants": [
    {
      "id": "A",
      "display": "A",
      "role": "Participant",
      "explicit": false
    }
  ],
  "events": [
    {
      "span": {
        "start": 10,
        "end": 34
      },
      "kind": {
        "Message": {
          "from": "[",
          "to": "A",
          "arrow": "->",
          "label": "found-left-plain",
          "from_virtual": {
            "side": "left",
            "kind": "plain"
          }
        }
      }
    },
    {
      "span": {
        "start": 35,
        "end": 60
      },
      "kind": {
        "Message": {
          "from": "]",
          "to": "A",
          "arrow": "->",
          "label": "found-right-plain",
          "from_virtual": {
            "side": "right",
            "kind": "plain"
          }
        }
      }
    },
    {
      "span": {
        "start": 61,
        "end": 84
      },
      "kind": {
        "Message": {
          "from": "A",
          "to": "[",
          "arrow": "->",
          "label": "lost-left-plain",
          "to_virtual": {
            "side": "left",
            "kind": "plain"
          }
        }
      }
    },
    {
      "span": {
        "start": 85,
        "end": 109
      },
      "kind": {
        "Message": {
          "from": "A",
          "to": "]",
          "arrow": "->",
          "label": "lost-right-plain",
          "to_virtual": {
            "side": "right",
            "kind": "plain"
          }
        }
      }
    },
    {
      "span": {
        "start": 110,
        "end": 136
      },
      "kind": {
        "Message": {
          "from": "[o",
          "to": "A",
          "arrow": "->",
          "label": "found-left-circle",
          "from_virtual": {
            "side": "left",
            "kind": "circle"
          }
        }
      }
    },
    {
      "span": {
        "start": 137,
        "end": 164
      },
      "kind": {
        "Message": {
          "from": "o]",
          "to": "A",
          "arrow": "->",
          "label": "found-right-circle",
          "from_virtual": {
            "side": "right",
            "kind": "circle"
          }
        }
      }
    },
    {
      "span": {
        "start": 165,
        "end": 190
      },
      "kind": {
        "Message": {
          "from": "A",
          "to": "[o",
          "arrow": "->",
          "label": "lost-left-circle",
          "to_virtual": {
            "side": "left",
            "kind": "circle"
          }
        }
      }
    },
    {
      "span": {
        "start": 191,
        "end": 217
      },
      "kind": {
        "Message": {
          "from": "A",
          "to": "o]",
          "arrow": "->",
          "label": "lost-right-circle",
          "to_virtual": {
            "side": "right",
            "kind": "circle"
          }
        }
      }
    },
    {
      "span": {
        "start": 218,
        "end": 243
      },
      "kind": {
        "Message": {
          "from": "[x",
          "to": "A",
          "arrow": "->",
          "label": "found-left-cross",
          "from_virtual": {
            "side": "left",
            "kind": "cross"
          }
        }
      }
    },
    {
      "span": {
        "start": 244,
        "end": 270
      },
      "kind": {
        "Message": {
          "from": "x]",
          "to": "A",
          "arrow": "->",
          "label": "found-right-cross",
          "from_virtual": {
            "side": "right",
            "kind": "cross"
          }
        }
      }
    },
    {
      "span": {
        "start": 271,
        "end": 295
      },
      "kind": {
        "Message": {
          "from": "A",
          "to": "[x",
          "arrow": "->",
          "label": "lost-left-cross",
          "to_virtual": {
            "side": "left",
            "kind": "cross"
          }
        }
      }
    },
    {
      "span": {
        "start": 296,
        "end": 321
      },
      "kind": {
        "Message": {
          "from": "A",
          "to": "x]",
          "arrow": "->",
          "label": "lost-right-cross",
          "to_virtual": {
            "side": "right",
            "kind": "cross"
          }
        }
      }
    },
    {
      "span": {
        "start": 322,
        "end": 349
      },
      "kind": {
        "Message": {
          "from": "[*]",
          "to": "A",
          "arrow": "->",
          "label": "found-left-filled",
          "from_virtual": {
            "side": "left",
            "kind": "filled"
          }
        }
      }
    },
    {
      "span": {
        "start": 350,
        "end": 377
      },
      "kind": {
        "Message": {
          "from": "A",
          "to": "[*]",
          "arrow": "->",
          "label": "lost-right-filled",
          "to_virtual": {
            "side": "right",
            "kind": "filled"
          }
        }
      }
    }
  ],
  "teoz": false,
  "title": null,
  "header": null,
  "footer": null,
  "caption": null,
  "legend": null,
  "skinparams": [],
  "style": {
    "arrow_color": "#111",
    "lifeline_border_color": "#555",
    "participant_background_color": "#f6f6f6",
    "participant_border_color": "#111",
    "note_background_color": "#fff8c4",
    "note_border_color": "#111",
    "group_background_color": "#fafafa",
    "group_border_color": "#666"
  },
  "footbox_visible": true
}
