tests/snapshots/virtual_endpoint_fidelity__dump_mode_scene_preserves_virtual_endpoint_found_lost_side_shape_semantics.snap
---
source: tests/virtual_endpoint_fidelity.rs
expression: json
---
{
  "size": {
    "width": 340,
    "height": 680
  },
  "lanes": [
    {
      "id": "A",
      "display": "A",
      "role": "Participant",
      "x": 100
    }
  ],
  "rows": [
    {
      "y": 120,
      "event": {
        "span": {
          "start": 10,
          "end": 34
        },
        "kind": {
          "Message": {
            "from": "[",
            "to": "A",
            "arrow": "->",
            "label": "found-left-plain",
            "from_virtual": {
              "side": "left",
              "kind": "plain"
            }
          }
        }
      }
    },
    {
      "y": 160,
      "event": {
        "span": {
          "start": 35,
          "end": 60
        },
        "kind": {
          "Message": {
            "from": "]",
            "to": "A",
            "arrow": "->",
            "label": "found-right-plain",
            "from_virtual": {
              "side": "right",
              "kind": "plain"
            }
          }
        }
      }
    },
    {
      "y": 200,
      "event": {
        "span": {
          "start": 61,
          "end": 84
        },
        "kind": {
          "Message": {
            "from": "A",
            "to": "[",
            "arrow": "->",
            "label": "lost-left-plain",
            "to_virtual": {
              "side": "left",
              "kind": "plain"
            }
          }
        }
      }
    },
    {
      "y": 240,
      "event": {
        "span": {
          "start": 85,
          "end": 109
        },
        "kind": {
          "Message": {
            "from": "A",
            "to": "]",
            "arrow": "->",
            "label": "lost-right-plain",
            "to_virtual": {
              "side": "right",
              "kind": "plain"
            }
          }
        }
      }
    },
    {
      "y": 280,
      "event": {
        "span": {
          "start": 110,
          "end": 136
        },
        "kind": {
          "Message": {
            "from": "[o",
            "to": "A",
            "arrow": "->",
            "label": "found-left-circle",
            "from_virtual": {
              "side": "left",
              "kind": "circle"
            }
          }
        }
      }
    },
    {
      "y": 320,
      "event": {
        "span": {
          "start": 137,
          "end": 164
        },
        "kind": {
          "Message": {
            "from": "o]",
            "to": "A",
            "arrow": "->",
            "label": "found-right-circle",
            "from_virtual": {
              "side": "right",
              "kind": "circle"
            }
          }
        }
      }
    },
    {
      "y": 360,
      "event": {
        "span": {
          "start": 165,
          "end": 190
        },
        "kind": {
          "Message": {
            "from": "A",
            "to": "[o",
            "arrow": "->",
            "label": "lost-left-circle",
            "to_virtual": {
              "side": "left",
              "kind": "circle"
            }
          }
        }
      }
    },
    {
      "y": 400,
      "event": {
        "span": {
          "start": 191,
          "end": 217
        },
        "kind": {
          "Message": {
            "from": "A",
            "to": "o]",
            "arrow": "->",
            "label": "lost-right-circle",
            "to_virtual": {
              "side": "right",
              "kind": "circle"
            }
          }
        }
      }
    },
    {
      "y": 440,
      "event": {
        "span": {
          "start": 218,
          "end": 243
        },
        "kind": {
          "Message": {
            "from": "[x",
            "to": "A",
            "arrow": "->",
            "label": "found-left-cross",
            "from_virtual": {
              "side": "left",
              "kind": "cross"
            }
          }
        }
      }
    },
    {
      "y": 480,
      "event": {
        "span": {
          "start": 244,
          "end": 270
        },
        "kind": {
          "Message": {
            "from": "x]",
            "to": "A",
            "arrow": "->",
            "label": "found-right-cross",
            "from_virtual": {
              "side": "right",
              "kind": "cross"
            }
          }
        }
      }
    },
    {
      "y": 520,
      "event": {
        "span": {
          "start": 271,
          "end": 295
        },
        "kind": {
          "Message": {
            "from": "A",
            "to": "[x",
            "arrow": "->",
            "label": "lost-left-cross",
            "to_virtual": {
              "side": "left",
              "kind": "cross"
            }
          }
        }
      }
    },
    {
      "y": 560,
      "event": {
        "span": {
          "start": 296,
          "end": 321
        },
        "kind": {
          "Message": {
            "from": "A",
            "to": "x]",
            "arrow": "->",
            "label": "lost-right-cross",
            "to_virtual": {
              "side": "right",
              "kind": "cross"
            }
          }
        }
      }
    },
    {
      "y": 600,
      "event": {
        "span": {
          "start": 322,
          "end": 349
        },
        "kind": {
          "Message": {
            "from": "[*]",
            "to": "A",
            "arrow": "->",
            "label": "found-left-filled",
            "from_virtual": {
              "side": "left",
              "kind": "filled"
            }
          }
        }
      }
    },
    {
      "y": 640,
      "event": {
        "span": {
          "start": 350,
          "end": 377
        },
        "kind": {
          "Message": {
            "from": "A",
            "to": "[*]",
            "arrow": "->",
            "label": "lost-right-filled",
            "to_virtual": {
              "side": "right",
              "kind": "filled"
            }
          }
        }
      }
    }
  ]
}
